--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "16.5.0",
-    "react-native": "0.57.0"
+    "react-native": "0.57.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.45.5",
     "react-test-renderer": "16.5.0"
