--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prop-types": "^15.6.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-navigation": "^2.16.0",
+    "react-navigation-redux-helpers": "^2.0.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
